RDM-2469: Title middle aligned to button; fixed hint label spacing issue;

--- a/src/app/shared/palette/collection/collection-field.scss
+++ b/src/app/shared/palette/collection/collection-field.scss
@@ -14,13 +14,14 @@
   }
 }
 .error-spacing {
-  margin-top: 0px;
+  margin-top: 10px;
 }
 .collection-title{
   height: 51px;
 }
 .float-left {
   float: left;
+  padding-top: 8px;
 }
 .float-right {
   float: right;
